# telrag

./: .dockerignore  .env  .env.example  .gitignore  Caddyfile  CeleryDockerfile  DockerFile  Dockerfile  README.md  RECRUITMENT_EVALUATION.md  Readme.md  celery.sh  commands.md  compose.dev.yaml  compose.yaml  dev-compose.yaml  dev_webhook_setup.sh  development_webhook_setup.sh  diagram.md  docker-compose.yaml  docker-restart.sh  entrypoint.sh  main.py  makefile  mdocker.sh  mdocker_stop.sh  production_webhook_setup.sh  prompts.md  pyproject.toml  remove.md  replacements.txt  requirements.txt  run_dev.sh  run_local.sh  run_prod.sh  sample.oga  setup.sh  webhook_setup.sh
.config/: .gitconfig  alloy.hcl  prometheus.yml
.devcontainer/: devcontainer.json
.sh/: dev_webhook_setup.sh  initialization.sh  pro_webhook_setup.sh  run.sh  run_dev.sh  run_dev_public.sh  run_prod.sh  webhook_setup.sh
compose/: compose.dev.yaml  compose.production.yaml
data/: query_class_retriever.jsonl  query_sem_llm.jsonl  train_dataset.jsonl
help/: Monitoring_Structure.md  RAG_Evaluation.md
src/: celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  db.sqlite3  dump.rdb  sample.oga
src/chat/: __init__.py  admin.py  apps.py  constants.py  consumers.py  models.py  operations.py  prompts.py  routing.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
src/django_project/: __init__.py  asgi.py  celery.py  settings.py  urls.py
src/rag/: admin.py  models.py
src/templates/: base.html  chat.html  demo.html  home.html  message.html  telegram.html
(+211 files in other folders)
