[project]
name = "telrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.2",
    "channels>=4.3.2",
    "daphne>=4.2.1",
    "django>=6.0.2",
    "dotenv>=0.9.9",
    "huggingface-hub>=1.4.1",
    "langchain-text-splitters>=1.1.0",
    "markdown>=3.10.2",
    "openai>=2.21.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "redis>=7.3.0",
    "requests>=2.32.5",
]
